<resources>
    <string name="app_name">PayBiz</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="register_below">Register Below</string>
    <string name="ref_id">Referral Id</string>
    <string name="apply_for">Apply For</string>
    <string name="name">NAME</string>
    <string name="email_id">Email ID</string>
    <string name="adhar_no">Aadhar No.</string>
    <string name="pan_number">Pan Number</string>
    <string name="dob">DOB</string>
    <string name="gst_number">GST Number</string>
    <string name="address">Address</string>
    <string name="street">Street/Flat/AreaName</string>
    <string name="nearby">Near By Location</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="division">Division</string>
    <string name="district">District</string>
    <string name="pincode">Pincode</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="agent">Agent</string>
    <string name="distributor">Distributor</string>
    <string name="bank_details">Bank Details</string>
    <string name="acc_no">Account No.</string>
    <string name="holder_name">Holder Name</string>
    <string name="ifsc_code">IFSC CODE</string>
    <string name="bank_name">Bank Name</string>
    <string name="file_uploading">File Uploading</string>
    <string name="pan_file">pan_file</string>
    <string name="photo">image_file</string>
    <string name="adhar_file">Adhar File</string>
    <string name="passbook_or_cheque">Passbook or Cheque</string>
    <string name="generic_terms">All information fill by you are correct</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="home_join">Home/Join User Registration</string>
    <string name="welcome">Wel-Come</string>
    <string name="fast_secure">Fast &amp; Secure</string>
    <string name="best_support_with_training">Best Support With Training (New-User)</string>
    <string name="trainner_no">(+91)7222021001</string>
    <string name="basic_upload_details">Basic Upload Detail</string>
    <string name="join_with">Join with</string>
    <string name="personal_details">Personal Details</string>
    <string name="generic_terms_1">I agree to all</string>
    <string name="generic_terms_2">Terms of Use &amp; Posting Rules</string>
    <string name="submit">Submit</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="caption">Caption</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">Register</string>
    <string name="otp_msg">Please Fill Valid OTP</string>
    <string name="otp">OTP</string>
    <string name="search_user">Search User</string>
    <string name="resend">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dashboard_activity">Dashboard</string>
    <string name="new_offer">New Offer:-</string>
    <string name="new_offer_str">We have revise Electricity Bill and LIC Premium commission from
        0.90 to 1</string>
    <string name="welcome_str">Welcome to The PayBizz</string>
    <string name="digital_place">Digital Place</string>
    <string name="paybizz_portal_str">PayBizz पोर्टल के जरिए आप बहुत सारे ऑनलाइन काम कर सकते हैं जैसे कि आधार
        कार्ड से पैसे निकालने का काम ,मनी ट्रांसफर, बिजली बिल जमा ,आईटीआर, पैन कार्ड सर्विस, LIC प्रीमियम प्वाइंट,
        फोन रिचार्ज, डीटीएच रिचार्ज  और भी बहुत कुछ ।</string>
    <string name="become_biz_str">Become a PayBizz Agent &amp; earn Rs. 20,000 to Rs. 50,000
        per month Join today with Digital platform.</string>
    <string name="please_email_address">Please Fill E-Mail Address ?</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="your_name">Your Name</string>
    <string name="join_now">Join Now >></string>
    <string name="aeps">AePS</string>
    <string name="money_transfer">Money-Transfer</string>
    <string name="electricity_bill">Electricity Bill Pay</string>
    <string name="pan_service">Pan Service</string>
    <string name="lic">LIC</string>
    <string name="why_choose_paybiz">Why choose PayBizz?</string>
    <string name="save_money">Save Time and Money!</string>
    <string name="low_cost">Low Cost</string>
    <string name="get_your_recharge">Get your recharge to family and friends in minutes</string>
    <string name="fast">Fast</string>
    <string name="fast_str">As a Digital, Data and Technology build and run services which are
        used by thousant of people every day.</string>
    <string name="clean_ui">Clean UI &amp; Simple</string>
    <string name="clean_ui_str">You get You can use these credits to take recharge.</string>
    <string name="trust_pay">Trust pay</string>
    <string name="trust_pay_str">100% Payment Protection. Easy Return Policy.</string>
    <string name="secure_payments">100% Secure Payments</string>
    <string name="secure_payments_str">Moving your card details to a much more
        secured place.</string>
    <string name="support">24X7 Support</string>
    <string name="support_str">We\'re here to help. Have a query and need help ? Click here</string>
    <string name="how_it_works">How It Works?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="instant_start">Instant Start (Kyc)</string>
    <string name="done">Done</string>
    <string name="our_partners">Our Partners</string>
    <string name="agent_say">Agent Say</string>
    <string name="surendra">Surendra</string>
    <string name="surendra_desc">We very pleased with all the work and expertise provided</string>
    <string name="raja_ram">Raja Ram</string>
    <string name="raja_ram_desc">These guys rock.are professional, knowledgeable, and fun to
        work with. I recommend them to anyone looking for an engaged</string>
    <string name="naresh_choudhary_desc">
        Their team is knowledgeable, responsive and committed to supporting our initiatives, making
        them invaluable partners&#8230;</string>
    <string name="naresh_choudhary">Naresh Choudhary</string>
    <string name="mukesh">Mukesh</string>
    <string name="mukesh_desc">Everyone at paybizz that I\'ve met has been extremely helpful</string>
    <string name="jitendra">Jitendra</string>
    <string name="jitendra_desc">We have worked with Digital Marketing Works for over 10 years now
        and have been very impressed </string>
    <string name="team">Team</string>
    <string name="team_number">57</string>
    <string name="location">Location</string>
    <string name="location_no">200</string>
    <string name="subcribe">Subscribe</string>
    <string name="subcribe_nl">Subscribe to Newsletter</string>
    <string name="receive_new_ad">and receive new ads in inbox</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="quick_link">Quick Link</string>
    <string name="about_us">About Us</string>
    <string name="events">Events</string>
    <string name="faq">FAQ\'s</string>
    <string name="Blog">Blog</string>
    <string name="Shop">Shop</string>
    <string name="contact_info">Contact Info</string>
    <string name="services">Services</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="money_transfer_">Money Transfer</string>
    <string name="terms_and_condtions">Terms &amp; Conditions</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="action">Action</string>
    <string name="receipt">Receipt</string>
    <string name="pay_lic">Pay-LiC</string>
    <string name="guidelines">Guidelines</string>
    <string name="training">Training</string>
    <string name="video">Video</string>
    <string name="commission_sheet">Commission sheet</string>
    <string name="report">Report</string>
    <string name="serial_no">S.No</string>
    <string name="amt">Amount</string>
    <string name="master">Master</string>
    <string name="payu_gateway">PayU Gateway</string>
    <string name="fund_req">Fund Request</string>
    <string name="drk_gift_card">DRK Gift Card</string>
    <string name="aeps_acc_req">AEPS Account Request</string>
    <string name="uti_pan_coupon">UTI PAN Coupon</string>
    <string name="money_transfer_new">Money Transfer (New)</string>
    <string name="income_tax_return">Inocme Tax Return</string>
    <string name="drk_gift_rep">DRK Gift Report</string>
    <string name="electricity_bill_report">Electricity Bill Report</string>
    <string name="lic_report">LIC Report</string>
    <string name="pan_card_report">Pan Card Report</string>
    <string name="income_tax_report">Income Tax Repor</string>
    <string name="submit_tkt">Submit Ticket</string>
    <string name="uname">UserName</string>
    <string name="transaction">Transactions</string>
    <string name="tnx_date">Tnx Date</string>
    <string name="tnx_no">Tnx No.</string>
    <string name="req_date">Req. Date</string>
    <string name="pay_mode">Pay Mode</string>
    <string name="action_date">Action Date</string>
    <string name="card_amt">Card Amount</string>
    <string name="req_for">Request For</string>
    <string name="req_val">Request Value</string>
    <string name="request_date">Request Date</string>
    <string name="remark">Remark</string>
    <string name="action_date_time">Action Date&amp;Time</string>
    <string name="consumer_name">Consumer Name</string>
    <string name="bene_validate">Bene Validate</string>
    <string name="transfer_amt">Transfer Amount</string>
    <string name="type">TYPE</string>
    <string name="util_code">UTILITY CODE</string>
    <string name="serv_typ">SERVICE TYPE</string>
    <string name="ref_id_">REF ID</string>
    <string name="bene_aur_receiver">BENE/RECEIVER</string>
    <string name="charges_aur_commission">CHAR./COMM.</string>
    <string name="total_amt">TOTAL AMOUNT</string>
    <string name="agnt_code">Agent Code</string>
    <string name="plan_name">Plan Name</string>
    <string name="plan_amt">Plan Amount</string>
    <string name="plan_commission">Plan Commission</string>
    <string name="ref_no">Ref. No.</string>
    <string name="id_proof">Identity Proof</string>
    <string name="add_proof">Address Proof</string>
    <string name="dob_proof">DOB Proof</string>
    <string name="form_49_i">Form 49A(I)</string>
    <string name="form_49_ii">Form 49A(II)</string>
    <string name="opening_bal">Opening Balance</string>
    <string name="dr_and_cr">Dr/Cr</string>
    <string name="gross_commission">Gross Comm.</string>
    <string name="tds">TDS</string>
    <string name="net_comm">Net Comm.</string>
    <string name="closing_bal">Closing Balance</string>
    <string name="sub_date_time">Submit Date&amp;Time</string>
</resources>