<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:background="@color/pay_bizz_orange"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/serial_no_id"
        style="@style/PBReportTableTV"
        android:text="@string/serial_no"/>
    <TextView
        android:id="@+id/consumer_name"
        style="@style/PBReportTableTV"
        android:text="@string/consumer_name"/>
    <TextView
        android:id="@+id/agnt_code"
        style="@style/PBReportTableTV"
        android:text="@string/agnt_code"/>
    <TextView
        android:id="@+id/opening_bal"
        style="@style/PBReportTableTV"
        android:text="@string/opening_bal"/>
    <TextView
        android:id="@+id/amt"
        style="@style/PBReportTableTV"
        android:text="@string/amt"/>
    <TextView
        android:id="@+id/dr_and_cr"
        style="@style/PBReportTableTV"
        android:text="@string/dr_and_cr"/>
    <TextView
        android:id="@+id/gross_commission"
        style="@style/PBReportTableTV"
        android:text="@string/gross_commission"/>
    <TextView
        android:id="@+id/tds"
        style="@style/PBReportTableTV"
        android:text="@string/tds"/>
    <TextView
        android:id="@+id/net_comm"
        style="@style/PBReportTableTV"
        android:text="@string/net_comm"/>
    <TextView
        android:id="@+id/closing_bal"
        style="@style/PBReportTableTV"
        android:text="@string/closing_bal"/>
    <TextView
        android:id="@+id/status"
        style="@style/PBReportTableTV"
        android:text="@string/status"/>
    <TextView
        android:id="@+id/remark"
        style="@style/PBReportTableTV"
        android:text="@string/remark"/>
    <TextView
        android:id="@+id/sub_date_time"
        style="@style/PBReportTableTV"
        android:text="@string/sub_date_time"/>
    <TextView
        android:id="@+id/action_date_time"
        style="@style/PBReportTableTV"
        android:text="@string/action_date_time"/>

</LinearLayout>