<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:background="@color/pay_bizz_orange"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/serial_no_id"
        style="@style/PBReportTableTV"
        android:text="@string/serial_no"/>
    <TextView
        android:id="@+id/consumer_name"
        style="@style/PBReportTableTV"
        android:text="@string/consumer_name"/>
    <TextView
        android:id="@+id/type"
        style="@style/PBReportTableTV"
        android:text="@string/type"/>
    <TextView
        android:id="@+id/ref_no"
        style="@style/PBReportTableTV"
        android:text="@string/ref_no"/>
    <TextView
        android:id="@+id/amt"
        style="@style/PBReportTableTV"
        android:text="@string/amt"/>
    <TextView
        android:id="@+id/id_proof"
        style="@style/PBReportTableTV"
        android:text="@string/id_proof"/>
    <TextView
        android:id="@+id/add_proof"
        style="@style/PBReportTableTV"
        android:text="@string/add_proof"/>
    <TextView
        android:id="@+id/dob_proof"
        style="@style/PBReportTableTV"
        android:text="@string/dob_proof"/>
    <TextView
        android:id="@+id/form_49_i"
        style="@style/PBReportTableTV"
        android:text="@string/form_49_i"/>
    <TextView
        android:id="@+id/form_49_ii"
        style="@style/PBReportTableTV"
        android:text="@string/form_49_ii"/>
    <TextView
        android:id="@+id/date"
        style="@style/PBReportTableTV"
        android:text="@string/date"/>
    <TextView
        android:id="@+id/receipt"
        style="@style/PBReportTableTV"
        android:text="@string/receipt"/>
    <TextView
        android:id="@+id/status"
        style="@style/PBReportTableTV"
        android:text="@string/status"/>
</LinearLayout>