<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:background="@color/pay_bizz_orange"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/serial_no_id"
        style="@style/PBReportTableTV"
        android:text="@string/serial_no"/>
    <TextView
        android:id="@+id/type"
        style="@style/PBReportTableTV"
        android:text="@string/type"/>
    <TextView
        android:id="@+id/util_code"
        style="@style/PBReportTableTV"
        android:text="@string/util_code"/>
    <TextView
        android:id="@+id/serv_typ"
        style="@style/PBReportTableTV"
        android:text="@string/serv_typ"/>
    <TextView
        android:id="@+id/ref_id_"
        style="@style/PBReportTableTV"
        android:text="@string/ref_id_"/>
    <TextView
        android:id="@+id/tnx_date"
        style="@style/PBReportTableTV"
        android:text="@string/tnx_date"/>
    <TextView
        android:id="@+id/bene_aur_receiver"
        style="@style/PBReportTableTV"
        android:text="@string/bene_aur_receiver"/>
    <TextView
        android:id="@+id/acc_no"
        style="@style/PBReportTableTV"
        android:text="@string/acc_no"/>
    <TextView
        android:id="@+id/amt"
        style="@style/PBReportTableTV"
        android:text="@string/amt"/>
    <TextView
        android:id="@+id/charges_aur_commission"
        style="@style/PBReportTableTV"
        android:text="@string/charges_aur_commission"/>
    <TextView
        android:id="@+id/total_amt"
        style="@style/PBReportTableTV"
        android:text="@string/total_amt"/>
    <TextView
        android:id="@+id/remark"
        style="@style/PBReportTableTV"
        android:text="@string/remark"/>
</LinearLayout>