<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_services"
            android:title="@string/services" />
    </group>
    <item android:title= "@string/about_us" >
        <menu>
            <item
                android:id= "@+id/about"
                android:title= "@string/about" />
            <item
                android:id= "@+id/terms_and_conditions"
                android:title= "@string/terms_and_condtions" />
            <item
                android:id= "@+id/faq"
                android:title= "@string/faq" />
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/contact_us" />
    </group>
    <item android:title= "@string/login" >
        <menu>
            <item
                android:id= "@+id/login"
                android:title= "@string/login" />
            <item
                android:id= "@+id/forget_password"
                android:title= "@string/forget_password" />
            <item
                android:id= "@+id/register"
                android:title= "@string/register" />
        </menu>
    </item>


</menu>