<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:background="@color/pay_bizz_orange"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/serial_no_id"
        style="@style/PBReportTableTV"
        android:text="@string/serial_no"/>
    <TextView
        android:id="@+id/acc_no"
        style="@style/PBReportTableTV"
        android:text="@string/acc_no"/>
    <TextView
        android:id="@+id/tnx_date"
        style="@style/PBReportTableTV"
        android:text="@string/tnx_date"/>
    <TextView
        android:id="@+id/bank_name"
        style="@style/PBReportTableTV"
        android:text="@string/bank_name"/>
    <TextView
        android:id="@+id/ifsc_code"
        style="@style/PBReportTableTV"
        android:text="@string/ifsc_code"/>
    <TextView
        android:id="@+id/mobile_no"
        style="@style/PBReportTableTV"
        android:text="@string/mobile_no"/>
    <TextView
        android:id="@+id/name"
        style="@style/PBReportTableTV"
        android:text="@string/name"/>
    <TextView
        android:id="@+id/bene_validate"
        style="@style/PBReportTableTV"
        android:visibility="gone"
        android:text="@string/bene_validate"/>
    <TextView
        android:id="@+id/transfer_amt"
        style="@style/PBReportTableTV"
        android:text="@string/transfer_amt"/>
    <TextView
        android:id="@+id/action"
        style="@style/PBReportTableTV"
        android:visibility="gone"
        android:text="@string/action"/>
    <TextView
        android:id="@+id/status"
        style="@style/PBReportTableTV"
        android:text="@string/status"/>
</LinearLayout>