<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:background="@color/pay_bizz_orange"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/serial_no_id"
        style="@style/PBReportTableTV"
        android:text="@string/serial_no"/>
    <TextView
        android:id="@+id/tnx_no"
        style="@style/PBReportTableTV"
        android:text="@string/tnx_no"/>
    <TextView
        android:id="@+id/uname"
        style="@style/PBReportTableTV"
        android:text="@string/uname"/>
    <TextView
        android:id="@+id/plan_name"
        style="@style/PBReportTableTV"
        android:text="@string/plan_name"/>
    <TextView
        android:id="@+id/consumer_name"
        style="@style/PBReportTableTV"
        android:text="@string/consumer_name"/>
    <TextView
        android:id="@+id/plan_amt"
        style="@style/PBReportTableTV"
        android:text="@string/plan_amt"/>
    <TextView
        android:id="@+id/plan_commission"
        style="@style/PBReportTableTV"
        android:text="@string/plan_commission"/>
    <TextView
        android:id="@+id/total_amt"
        style="@style/PBReportTableTV"
        android:text="@string/total_amt"/>
    <TextView
        android:id="@+id/tnx_date"
        style="@style/PBReportTableTV"
        android:text="@string/tnx_date"/>
    <TextView
        android:id="@+id/status"
        style="@style/PBReportTableTV"
        android:text="@string/status"/>
</LinearLayout>