<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:background="@color/pay_bizz_orange"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/serial_no_id"
        style="@style/PBReportTableTV"
        android:text="@string/serial_no"/>
    <TextView
        android:id="@+id/amt"
        style="@style/PBReportTableTV"
        android:text="@string/amt"/>
    <TextView
        android:id="@+id/req_date"
        style="@style/PBReportTableTV"
        android:text="@string/req_date"/>
    <TextView
        android:id="@+id/pay_mode"
        style="@style/PBReportTableTV"
        android:text="@string/pay_mode"/>
    <TextView
        android:id="@+id/bank_name"
        style="@style/PBReportTableTV"
        android:text="@string/bank_name"/>
    <TextView
        android:id="@+id/tnx_id"
        style="@style/PBReportTableTV"
        android:text="@string/tnx_no"/>
    <TextView
        android:id="@+id/status"
        style="@style/PBReportTableTV"
        android:text="@string/status"/>
    <TextView
        android:id="@+id/action_date"
        style="@style/PBReportTableTV"
        android:text="@string/action_date"/>
</LinearLayout>